Use gem to add new chartkick graphing package

--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -1,2 +1,6 @@
 <h1 class="title">Market Viewer</h1>
 <h3 class="descrip"> View and analyze your favorite stocks</h3>
+
+<div class="chart-container">
+	<%= pie_chart [["Football", 10], ["Basketball", 5]] %>
+</div>
