--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -2,5 +2,5 @@
 <h3 class="descrip"> View and analyze your favorite stocks</h3>
 
 <div class="chart-container">
-	<%= pie_chart [["Football", 10], ["Basketball", 5]] %>
+	<%= line_chart @data %>
 </div>
