--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -23,8 +23,9 @@
   <div class="table">
     <div class="add-stock-input">
       Add Stock:
+      &nbsp;
       <input type="text" name="add-stock" />
-      <%= button_to "", add_stock_path('GOOG'), class: 'close-icon' %>
+      <%= button_to "Add", add_stock_path('GOOG'), class: 'add-icon' %>
     </div>
     <div class="stock-table-div">
       <table class="stock-table">
