--- a/app/assets/stylesheets/stock.scss
+++ b/app/assets/stylesheets/stock.scss
@@ -43,18 +43,18 @@ body {
 	display: flex;
 	padding: 0 31px 15px 0;
 	justify-content: flex-end;
-	font-size: 20px;
+	font-size: 18px;
 
-	.add-icon {
+	.add-button {
 		background-color: blue; /* Green */
 		border: none;
 		color: white;
-		padding: 3px 10px;
+		padding: 2px 10px;
 		margin-left: 5px;
 		text-align: center;
 		text-decoration: none;
 		display: inline-block;
-		font-size: 18px;
+		font-size: 16px;
 		cursor: pointer;
 	}
 }
