Final changes to controller

--- a/app/views/stock/index.html.erb
+++ b/app/views/stock/index.html.erb
@@ -1,5 +1,5 @@
 <h1 class="title">Market Viewer</h1>
-<h3 class="descrip"> View and analyze your favorite stocks</h3>
+<h3 class="descrip"> View and analyze your favorite stocks and ETFs</h3>
 
 <div class="container">
   <% if @invalid_stock %>
@@ -38,7 +38,7 @@
             <th>Symbol</th>
             <th>Type</th>
             <th>Last Price (USD)</th>
-            <th>Change (over )</th>
+            <th>Change (over 90D)</th>
             <th>Last Volume (M)</th>
             <th>Average Volume (M)</th>
         </tr>
